Fix/l10n br account (#75)
* FIX account move (#60)

* FIX account move

* FIX account move (#59)

* correct xml id for supplier invocie

* Sac/14698 tko br account (#61)

* FIX account move

* correct xml id for supplier invocie

* FIX accounts in withholdings

* Sac/14698 tko br account (#62)

* FIX account move

* correct xml id for supplier invocie

* FIX accounts in withholdings

* update domain on taxes

* Sac/14698 tko br account (#63)

* FIX account move

* correct xml id for supplier invocie

* FIX accounts in withholdings

* update domain on taxes

* remove group

* hide field price_include

* FIX taxes configuration

* FIX withholding computation (#74)

* FIX withholding analytic accounts

* FIX withholding computation

* FIX analytic account for withholding

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,10 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
+*$py.class
 
 # C extensions
 *.so
-
-# Bazaar
-.bzr
 
 # Distribution / packaging
 .Python
@@ -25,6 +23,8 @@ var/
 *.egg-info/
 .installed.cfg
 *.egg
+*.pyc
+*~
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -45,6 +45,7 @@ htmlcov/
 nosetests.xml
 coverage.xml
 *,cover
+.hypothesis/
 
 # Translations
 *.mo
@@ -52,9 +53,39 @@ coverage.xml
 
 # Django stuff:
 *.log
+local_settings.py
+
+# Flask stuff:
+instance/
+.webassets-cache
+
+# Scrapy stuff:
+.scrapy
 
 # Sphinx documentation
 docs/_build/
 
 # PyBuilder
 target/
+
+# IPython Notebook
+.ipynb_checkpoints
+
+# pyenv
+.python-version
+
+# celery beat schedule file
+celerybeat-schedule
+
+# dotenv
+.env
+
+# virtualenv
+venv/
+ENV/
+
+# Spyder project settings
+.spyderproject
+
+# Rope project settings
+.ropeproject
